updating notebook, embeddings can now be saved

--- a/notebooks/Draft_Embeddings_and_KNN_Model.ipynb
+++ b/notebooks/Draft_Embeddings_and_KNN_Model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4  001838f8-bbca-11e8-b2bc-ac1f6b6435d0       18"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
     "        \"target_id\": tf.io.FixedLenFeature([], tf.string),\n",
     "    }\n",
     "    example = tf.io.parse_single_example(example, feature_description)\n",
-    "    example[\"image\"] = tf.io.decode_jpeg(example[\"image\"], channels=3)\n",
+    "    example[\"image\"] = tf.io.decode_png(example[\"image\"], channels=3)\n",
     "    #example[\"bbox\"] = tf.sparse.to_dense(example[\"bbox\"])\n",
     "    return example\n",
     "\n",
@@ -215,13 +215,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-28 16:58:08.792051: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-06-28 16:58:08.792414: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1\n",
+      "\n",
+      "systemMemory: 8.00 GB\n",
+      "maxCacheSize: 2.67 GB\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# loop through all the files, combine the 4 colors into an array and save to tfrecord\n",
     "base_path = '../data/train/'\n",
-    "str_list = ['_red.png', '_blue.png', '_green.png','_yellow.png']\n",
+    "str_list = ['_red.png', '_blue.png', '_green.png']# ,'_yellow.png']\n",
     "\n",
     "# iterate over images in directory\n",
     "file_path = base_path+'data.tfrec'\n",
@@ -237,14 +257,30 @@
     "    # create an example with the image and label\n",
     "    example = create_example(raw_file, base_path+fname+'.png', target)\n",
     "    # write example\n",
-    "    tfrecord_writer.write(example.SerializeToString())"
+    "    tfrecord_writer.write(example.SerializeToString())\n",
+    "\n",
+    "\n",
+    "#   !!! TO DO: separate into shards so files don't get so big (?)\n",
+    "# def image_files_to_tfrecords(list_ds, output_folder, num_shard):\n",
+    "#     start = time.time()\n",
+    "#     for shard_id in range(0, num_shard):\n",
+    "#         shard_list = list_ds.shard(num_shards=num_shard, index=shard_id)\n",
+    "#         read_image_file_write_tfrecord(shard_list, output_folder + \"/part-\" + \"{:03d}\".format(shard_id) + \".tfrecord\")\n",
+    "#         print(\"Shard \" + str(shard_id) + \" saved after \" + str(int(time.time() - start)) + \"s\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-28 16:58:10.160680: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -317,6 +353,234 @@
     "    plt.figure(figsize=(7, 7))\n",
     "    plt.imshow(features[\"image\"].numpy())\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting efficientnet\n",
+      "  Downloading efficientnet-1.1.1-py3-none-any.whl (18 kB)\n",
+      "Collecting scikit-image\n",
+      "  Downloading scikit_image-0.19.3-cp39-cp39-macosx_12_0_arm64.whl (12.5 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.5/12.5 MB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hCollecting keras-applications<=1.0.8,>=1.0.7\n",
+      "  Downloading Keras_Applications-1.0.8-py3-none-any.whl (50 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.7/50.7 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.9.1 in /Users/ryan/neue_fische/human-protein-atlas-image-classification/.venv/lib/python3.9/site-packages (from keras-applications<=1.0.8,>=1.0.7->efficientnet) (1.23.0)\n",
+      "Requirement already satisfied: h5py in /Users/ryan/neue_fische/human-protein-atlas-image-classification/.venv/lib/python3.9/site-packages (from keras-applications<=1.0.8,>=1.0.7->efficientnet) (3.7.0)\n",
+      "Collecting imageio>=2.4.1\n",
+      "  Downloading imageio-2.19.3-py3-none-any.whl (3.4 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.4/3.4 MB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /Users/ryan/neue_fische/human-protein-atlas-image-classification/.venv/lib/python3.9/site-packages (from scikit-image->efficientnet) (21.3)\n",
+      "Requirement already satisfied: scipy>=1.4.1 in /Users/ryan/neue_fische/human-protein-atlas-image-classification/.venv/lib/python3.9/site-packages (from scikit-image->efficientnet) (1.8.1)\n",
+      "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,!=8.3.0,>=6.1.0 in /Users/ryan/neue_fische/human-protein-atlas-image-classification/.venv/lib/python3.9/site-packages (from scikit-image->efficientnet) (9.1.1)\n",
+      "Collecting networkx>=2.2\n",
+      "  Downloading networkx-2.8.4-py3-none-any.whl (2.0 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting tifffile>=2019.7.26\n",
+      "  Downloading tifffile-2022.5.4-py3-none-any.whl (195 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m195.6/195.6 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting PyWavelets>=1.1.1\n",
+      "  Downloading PyWavelets-1.3.0-cp39-cp39-macosx_11_0_arm64.whl (4.3 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.3/4.3 MB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/ryan/neue_fische/human-protein-atlas-image-classification/.venv/lib/python3.9/site-packages (from packaging>=20.0->scikit-image->efficientnet) (3.0.9)\n",
+      "Installing collected packages: tifffile, PyWavelets, networkx, imageio, scikit-image, keras-applications, efficientnet\n",
+      "Successfully installed PyWavelets-1.3.0 efficientnet-1.1.1 imageio-2.19.3 keras-applications-1.0.8 networkx-2.8.4 scikit-image-0.19.3 tifffile-2022.5.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install efficientnet\n",
+    "!pip install pyarrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf ../data/embeddings_train\n",
+    "!mkdir ../data/embeddings_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyarrow.parquet as pq\n",
+    "import pyarrow as pa\n",
+    "\n",
+    "def save_embeddings_ds_to_parquet(embeddings, dataset, path):\n",
+    "    embeddings = pa.array(embeddings.tolist(), type=pa.list_(pa.float32()))\n",
+    "    image_names = pa.array(dataset.map(lambda image_raw, image_name: image_name).as_numpy_iterator())\n",
+    "    table = pa.Table.from_arrays([image_names, embeddings], [\"image_name\", \"embedding\"])\n",
+    "    pq.write_table(table, path)\n",
+    "    \n",
+    "def images_to_embeddings(model, dataset, batch_size):\n",
+    "    return model.predict(dataset.batch(batch_size).map(lambda image_raw, image_name: image_raw), verbose=1)\n",
+    "\n",
+    "def preprocess_image(d):\n",
+    "    target_id = d['target_id']\n",
+    "    raw = d['image']\n",
+    "    #image = tf.image.decode_png(raw)\n",
+    "    image = tf.image.convert_image_dtype(raw, tf.float32)\n",
+    "\n",
+    "    return image, target_id\n",
+    "    \n",
+    "def tfrecords_to_write_embeddings(tfrecords_folder, output_folder, model, batch_size):\n",
+    "    #tfrecords = [f.numpy().decode(\"utf-8\") for f in \\\n",
+    "    #             tf.data.Dataset.list_files(tfrecords_folder + \"/*.tfrec\", shuffle=False)]\n",
+    "    #start = time.time()\n",
+    "    #for shard_id, tfrecord in enumerate(tfrecords):\n",
+    "    #shard = read_tfrecord(tfrecord)\n",
+    "    raw_dataset = tf.data.TFRecordDataset(f\"{base_path}data.tfrec\")\n",
+    "    parsed_dataset = raw_dataset \\\n",
+    "        .map(parse_tfrecord_fn, num_parallel_calls=tf.data.experimental.AUTOTUNE) \\\n",
+    "        .map(preprocess_image, num_parallel_calls=tf.data.experimental.AUTOTUNE) \\\n",
+    "        .apply(tf.data.experimental.ignore_errors())\n",
+    "\n",
+    "    embeddings = images_to_embeddings(model, parsed_dataset, batch_size)\n",
+    "    print(\"\")\n",
+    "    #print(\"Shard \" + str(shard_id) + \" done after \" + str(int(time.time() - start)) + \"s\")\n",
+    "    save_embeddings_ds_to_parquet(embeddings, parsed_dataset,\n",
+    "                                    output_folder + \"/embedding_test.parquet\")\n",
+    "    #print(\"Shard \" + str(shard_id) + \" saved after \" + str(int(time.time() - start)) + \"s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from efficientnet.tfkeras import EfficientNetB0\n",
+    "\n",
+    "\n",
+    "def run_inference(tfrecords_folder, output_folder, batch_size=1000):\n",
+    "    model = EfficientNetB0(weights='imagenet', include_top=False, pooling=\"avg\")\n",
+    "    tfrecords_to_write_embeddings(tfrecords_folder, output_folder, model, batch_size)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-28 16:59:07.152150: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 2s 2s/step\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_inference(\"../data/train\", \"../data/embeddings_train\", 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emb = pq.read_table(\"../data/embeddings_train\").to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>embedding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>b'16 0'</td>\n",
+       "      <td>[-0.16242778, -0.105916545, -0.14529389, -0.03...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b'7 1 2 0'</td>\n",
+       "      <td>[-0.12603691, -0.15263456, -0.103106946, -0.12...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b'5'</td>\n",
+       "      <td>[-0.18897206, -0.19018914, -0.032292187, -0.13...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b'1'</td>\n",
+       "      <td>[-0.1210375, -0.1288869, -0.14070033, -0.12894...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b'18'</td>\n",
+       "      <td>[-0.114861585, -0.1510871, -0.1432612, -0.1111...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   image_name                                          embedding\n",
+       "0     b'16 0'  [-0.16242778, -0.105916545, -0.14529389, -0.03...\n",
+       "1  b'7 1 2 0'  [-0.12603691, -0.15263456, -0.103106946, -0.12...\n",
+       "2        b'5'  [-0.18897206, -0.19018914, -0.032292187, -0.13...\n",
+       "3        b'1'  [-0.1210375, -0.1288869, -0.14070033, -0.12894...\n",
+       "4       b'18'  [-0.114861585, -0.1510871, -0.1432612, -0.1111..."
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emb"
    ]
   },
   {
