--- a/notebooks/Embeddings_and_KNN_Model.ipynb
+++ b/notebooks/Embeddings_and_KNN_Model.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initial attempt at setting up a simple image classification model using embeddings and KNN\n",
+    "# Initial attempt at setting up a simple image classification model using embeddings and KNN\n",
     "\n",
-    "- initially based on : https://github.com/rom1504/image_embeddings"
+    "In this notebook we built an embedding and train a KNN model on it. \n",
+    "The coding for the embedding is based on https://github.com/rom1504/image_embeddings. "
    ]
   },
   {
@@ -15,9 +16,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Install efficientnet which includes a CNN architecture\n",
     "!pip install efficientnet\n",
+    "#Install pyarrow which includes a python API for access to a Arrow C++ library\n",
     "!pip install pyarrow\n",
     "\n",
+    "#delete previous results and create a new folder for the results of this run\n",
     "!rm -rf ../data/embeddings_train\n",
     "!mkdir ../data/embeddings_train"
    ]
@@ -50,11 +54,7 @@
     "import warnings\n",
     "#warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
     "#warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
-    "#warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
-    "\n",
-    "base_path = '/Users/ryan/neue_fische/human-protein-atlas-image-classification/data/images_train_tfrec/'\n",
-    "embed_path = '/Users/ryan/neue_fische/human-protein-atlas-image-classification/data/embeddings_train/'\n",
-    "str_list = ['_red.png', '_blue.png', '_green.png']# ,'_yellow.png']"
+    "#warnings.filterwarnings(\"ignore\", category=FutureWarning)"
    ]
   },
   {
@@ -71,10 +71,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the data, run inference to get embeddings and save as parquet table files\n",
-    "\n",
-    "- loading TFRecord files, that were split into shards and saved in the notebook \"Convert_train_image_labels_to_tfrec.ipynb\"\n",
-    "- trying to do this without shards didn't work, as we quickly ran out of memory"
+    "## Embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before run the rest of this notebook, load the TFRecord files, that were split into shards and saved in the notebook \"Convert_train_image_labels_to_tfrec.ipynb\". This is necessary because while trying to do this without shards we quickly ran out of memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#change here to your directory and make sure you have already build the folders \n",
+    "base_path = '/Users/ryan/neue_fische/human-protein-atlas-image-classification/data/images_train_tfrec/'\n",
+    "embed_path = '/Users/ryan/neue_fische/human-protein-atlas-image-classification/data/embeddings_train/'\n",
+    "#select three of the four channels to fulfill RGB requirements - yellow was reported to be the least \n",
+    "#informative channel \n",
+    "str_list = ['_red.png', '_blue.png', '_green.png']# ,'_yellow.png']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following functions contain the functionalities for loading the data, for getting the embeddings, for running inference and for saving it as parquet table files."
    ]
   },
   {
@@ -84,6 +109,15 @@
    "outputs": [],
    "source": [
     "def parse_tfrecord_fn(example):\n",
+    "    \"\"\"\n",
+    "    parse the saved data in the TFRecord file and append \n",
+    "    name and path of the file\n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    example: dict\n",
+    "        Information saved in a TFRecord file\n",
+    "    \"\"\"\n",
     "    feature_description = {\n",
     "        \"image\": tf.io.FixedLenFeature([], tf.string),\n",
     "        \"path\": tf.io.FixedLenFeature([], tf.string),\n",
@@ -99,6 +133,19 @@
     "    return example\n",
     "\n",
     "def save_embeddings_ds_to_parquet(embeddings, dataset, path):\n",
+    "    \"\"\"\n",
+    "    Save the embeddings in a special data format - Parpquet - which is good for\n",
+    "    handling big data\n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    embeddings: list\n",
+    "        prediction of embedding function \n",
+    "    dataset: TFRecordDataset\n",
+    "        Dataset for the embedded data\n",
+    "    path: str\n",
+    "        path to a embedded data \n",
+    "    \"\"\"\n",
     "    embeddings = pa.array(embeddings.tolist(), type=pa.list_(pa.float32()))\n",
     "    target_ids = pa.array(dataset.map(lambda image_raw, target_id, image_path: target_id).as_numpy_iterator())\n",
     "    image_paths = pa.array(dataset.map(lambda image_raw, target_id, image_path: image_path).as_numpy_iterator())\n",
@@ -112,9 +159,29 @@
     "    pq.write_table(table, path)\n",
     "    \n",
     "def images_to_embeddings(model, dataset, batch_size):\n",
+    "    \"\"\"\n",
+    "    Do the actual embedding. \n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    model: obj\n",
+    "        object of a class for creating an embedding (e.g. a CNN)\n",
+    "    dataset: TFRecordDataset\n",
+    "        with needed information parsed dataset\n",
+    "    batch_size: int\n",
+    "        size of dataset part run at the same time\n",
+    "    \"\"\"\n",
     "    return model.predict(dataset.batch(batch_size).map(lambda image_raw, target_id, image_path: image_raw), verbose=1)\n",
     "\n",
     "def preprocess_image(d):\n",
+    "    \"\"\"\n",
+    "    Converts pictures in a format of float32, extract the target Id and the path to the picture.\n",
+    "    \n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    d: TFRecordDataset\n",
+    "        with needed information parsed dataset\n",
+    "    \"\"\"   \n",
     "    target_id = d['target_id']\n",
     "    raw = d['image']\n",
     "    image_path = d['path']\n",
@@ -123,11 +190,19 @@
     "    return image_raw, target_id, image_path\n",
     "\n",
     "def get_dataset(file):\n",
+    "    \"\"\"\n",
+    "    Get the Dataset in a workable format and parse it with all needed information\n",
     "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    file: str\n",
+    "        Filename for a dataset\n",
+    "    \"\"\"\n",
     "    #create the dataset\n",
     "    dataset = tf.data.TFRecordDataset(file)\n",
     "\n",
     "    #pass every single feature through our mapping function\n",
+    "    #map structures that are created in functions on dataset\n",
     "    parsed_dataset = dataset \\\n",
     "        .map(parse_tfrecord_fn, num_parallel_calls=tf.data.experimental.AUTOTUNE) \\\n",
     "        .map(preprocess_image, num_parallel_calls=tf.data.experimental.AUTOTUNE) \\\n",
@@ -135,6 +210,21 @@
     "    return parsed_dataset\n",
     "\n",
     "def tfrecords_to_write_embeddings(tfrecords_folder, output_folder, model, batch_size):\n",
+    "    \"\"\"\n",
+    "    Get files in TFRecord format and embed each of it with all needed information parsed with it.\n",
+    "    Save this in a parquet in given folder.\n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    tfrecords_folder: str\n",
+    "        path to folder with data which should be embedded\n",
+    "    output_folder: str\n",
+    "        path to folder where embedded data shall be saved\n",
+    "    model: obj\n",
+    "    object of a class for creating an embedding (e.g. a CNN)\n",
+    "    batch_size: int\n",
+    "        size of dataset part run at the same time\n",
+    "    \"\"\"    \n",
     "    #files = glob.glob(tfr_dir+pattern, recursive=False)\n",
     "    tfrecords = [f.numpy().decode(\"utf-8\") for f in \\\n",
     "                 tf.data.Dataset.list_files(tfrecords_folder + \"train_images*.tfrec\", shuffle=False)]\n",
@@ -152,6 +242,19 @@
     "\n",
     "    \n",
     "def run_inference(tfrecords_folder, output_folder, batch_size=100):\n",
+    "    \"\"\"\n",
+    "    Choose model for embedding and run the actual embedding. \n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    tfrecords_folder: str\n",
+    "        path to folder with data which should be embedded\n",
+    "    output_folder: str\n",
+    "        path to folder where embedded data shall be saved\n",
+    "    batch_size:\n",
+    "        size of dataset part run at the same time\n",
+    "        Default 100\n",
+    "    \"\"\"    \n",
     "    model = EfficientNetB0(weights='imagenet', include_top=False, pooling=\"avg\")\n",
     "    tfrecords_to_write_embeddings(tfrecords_folder, output_folder, model, batch_size)\n"
    ]
@@ -324,10 +427,37 @@
     }
    ],
    "source": [
+    "#run the embedding by calling the running function \n",
     "if not os.path.exists(embed_path):\n",
     "    # if directory doesn't exist, create and run_inference to create embeddings\n",
     "    os.mkdir(embed_path)\n",
     "    run_inference(base_path, embed_path, 10)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNN model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import multilabel_confusion_matrix\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.multioutput import MultiOutputClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare a KNN model "
    ]
   },
   {
@@ -508,30 +638,15 @@
    "outputs": [],
    "source": [
     "# get the features in one dataframe\n",
-    "df_feats = pd.DataFrame(list(map(np.ravel, emb.embedding)))\n"
+    "df_feats = pd.DataFrame(list(map(np.ravel, emb.embedding)))\n",
+    "df_feats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/vn/y7lprnhs06j1j5w4cj9t64080000gn/T/ipykernel_49408/293728058.py:49: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  targets[label_names[key]] = 0\n",
-      "/var/folders/vn/y7lprnhs06j1j5w4cj9t64080000gn/T/ipykernel_49408/293728058.py:38: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  row.target_id = np.array(row.target_id.split(\" \")).astype(np.int)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get the targets and one hot encode into a dataframe\n",
     "\n",
@@ -567,9 +682,26 @@
     "    27:  \"Rods & rings\"\n",
     "}\n",
     "\n",
-    "reverse_train_labels = dict((v,k) for k,v in label_names.items())\n",
-    "\n",
+    "# Dictionary is in wrong order to work with it. Turn it around.\n",
+    "reverse_train_labels = dict((v,k) for k,v in label_names.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def fill_targets(row):\n",
+    "    \"\"\"\n",
+    "    Modify the string with all labels in the target in a hot encoding format    \n",
+    "\n",
+    "    Args:\n",
+    "        row (series): row of the target DataFrame with all labels as a string\n",
+    "\n",
+    "    Returns:\n",
+    "        series: modified row of the target DataFrame in a hot encoding format\n",
+    "    \"\"\"\n",
     "    row.target_id = np.array(row.target_id.split(\" \")).astype(np.int)\n",
     "    for num in row.target_id:\n",
     "        name = label_names[int(num)]\n",
@@ -582,9 +714,8 @@
     "# add column for each protein and set to 0\n",
     "for key in label_names.keys():\n",
     "    targets[label_names[key]] = 0\n",
-    "targets\n",
     "# for each target value, set corresponding column = 1\n",
-    "targets = targets.apply(fill_targets, axis=1)\n"
+    "targets = targets.apply(fill_targets, axis=1)"
    ]
   },
   {
@@ -807,19 +938,9 @@
     }
    ],
    "source": [
+    "#ID and name of Target is not needed anymore because it is encoded in the other columns\n",
     "targets.drop(['target_id', 'image_name'],axis=1, inplace=True)\n",
     "targets.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import confusion_matrix, accuracy_score, recall_score\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -830,6 +951,13 @@
    "source": [
     "# Split data into train and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(df_feats, targets, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the model"
    ]
   },
   {
@@ -853,13 +981,19 @@
    ],
    "source": [
     "# Train model\n",
-    "from sklearn.multioutput import MultiOutputClassifier\n",
-    "\n",
     "knn = KNeighborsClassifier(n_neighbors=5, metric='euclidean')\n",
     "#knn.fit(X_train, y_train)\n",
     "\n",
+    "#use model object to create a object from a Multiclassifier \n",
     "multi_target_knn = MultiOutputClassifier(knn)\n",
     "multi_target_knn.fit(X_train, y_train)#.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict data"
    ]
   },
   {
@@ -1206,7 +1340,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import multilabel_confusion_matrix\n",
+    "\n",
     "# Print confusion matrix\n",
     "#sns.heatmap(multilabel_confusion_matrix(y_test, y_pred), annot=True, cmap='YlGn');\n",
     "mcm = multilabel_confusion_matrix(y_test, y_pred)\n",
@@ -1264,16 +1398,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The model only gives reasonable prediction for the first and the 25th feature. This are the features most often labeled in the pictures. <br>\n",
+    "To get better results for the other features we need to build model extra for that feature. The best two we can go on together in one CNN. "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.8 ('.venv': venv)",
+   "display_name": "Python 3.9.8 64-bit ('3.9.8')",
    "language": "python",
    "name": "python3"
   },
@@ -1292,7 +1427,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "720bc5554050b7f8e1eb7fe3e9802d242667e213d5e4820e5b9adf1aa2f6a51f"
+    "hash": "7935efc99e458b019fff8f61580c6779aa9e709ab6397fb50169c3b4839634ad"
    }
   }
  },
