documentation and a class call

--- a/notebooks/Embeddings_and_KNN_Model.ipynb
+++ b/notebooks/Embeddings_and_KNN_Model.ipynb
@@ -117,6 +117,11 @@
     "    ---------\n",
     "    example: dict\n",
     "        Information saved in a TFRecord file\n",
+    "    Returns\n",
+    "    ---------\n",
+    "    example: dict \n",
+    "        Information saved in a TFRecord file now with name, path and \n",
+    "        target_Id for each picture\n",
     "    \"\"\"\n",
     "    feature_description = {\n",
     "        \"image\": tf.io.FixedLenFeature([], tf.string),\n",
@@ -170,6 +175,10 @@
     "        with needed information parsed dataset\n",
     "    batch_size: int\n",
     "        size of dataset part run at the same time\n",
+    "    Returns\n",
+    "    ---------\n",
+    "    prediction: list\n",
+    "        prediction of the embedded dataset \n",
     "    \"\"\"\n",
     "    return model.predict(dataset.batch(batch_size).map(lambda image_raw, target_id, image_path: image_raw), verbose=1)\n",
     "\n",
@@ -181,6 +190,14 @@
     "    ---------\n",
     "    d: TFRecordDataset\n",
     "        with needed information parsed dataset\n",
+    "    Returns\n",
+    "    ---------\n",
+    "    image_raw: tf.float32\n",
+    "        pictures in a format of float32\n",
+    "    target_id: str\n",
+    "        target ID from the from the original .csv file\n",
+    "    image_path: str\n",
+    "        path to picture\n",
     "    \"\"\"   \n",
     "    target_id = d['target_id']\n",
     "    raw = d['image']\n",
@@ -197,6 +214,10 @@
     "    ---------\n",
     "    file: str\n",
     "        Filename for a dataset\n",
+    "    Returns\n",
+    "    ---------\n",
+    "    parsed_dataset: TFRecordDataset\n",
+    "        with needed information parsed dataset\n",
     "    \"\"\"\n",
     "    #create the dataset\n",
     "    dataset = tf.data.TFRecordDataset(file)\n",
@@ -694,13 +715,17 @@
    "source": [
     "def fill_targets(row):\n",
     "    \"\"\"\n",
-    "    Modify the string with all labels in the target in a hot encoding format    \n",
+    "    Modify the string with all labels in the target in a hot encoding format  \n",
     "\n",
-    "    Args:\n",
-    "        row (series): row of the target DataFrame with all labels as a string\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    row: series\n",
+    "        row of the target DataFrame with all labels as a string\n",
     "\n",
-    "    Returns:\n",
-    "        series: modified row of the target DataFrame in a hot encoding format\n",
+    "    Returns\n",
+    "    ---------\n",
+    "    row: series\n",
+    "        modified row of the target DataFrame in a hot encoding format\n",
     "    \"\"\"\n",
     "    row.target_id = np.array(row.target_id.split(\" \")).astype(np.int)\n",
     "    for num in row.target_id:\n",
