--- a/notebooks/FirstBinaryNeuralNetwork.ipynb
+++ b/notebooks/FirstBinaryNeuralNetwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting ipynb\n",
+      "  Using cached ipynb-0.5.1-py3-none-any.whl (6.9 kB)\n",
+      "Installing collected packages: ipynb\n",
+      "Successfully installed ipynb-0.5.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install ipynb\n",
+    "from ipynb.fs.full.decide_what_data_for_binary_model import Location_in_Target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,98 +174,13 @@
        "[31072 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "labels_training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Location_in_Target(object):\n",
-    "    ''' Class to get a list of name of pictures which are labeled with a specific \n",
-    "        location and the same number of names of pictures which labels do not \n",
-    "        contain the specific location.\n",
-    "        ...\n",
-    "        Attributes:\n",
-    "        ----------\n",
-    "        location: int \n",
-    "            number which define a location in a human cell\n",
-    "        pictures: panda.DataFrame\n",
-    "            list of the names of the pictures labeled with the location and \n",
-    "            same number of pictures without the label\n",
-    "        \n",
-    "        Methods:\n",
-    "        ----------\n",
-    "        save_pictures(pictures, column_name):\n",
-    "            Saves the list of picture names in an Attribute\n",
-    "        get_pictures()\n",
-    "            Returns the list of picture names\n",
-    "        determine_pictures(labels)  \n",
-    "            Find pictures with and without the specific label and call save method\n",
-    "            when list is build\n",
-    "    '''\n",
-    "\n",
-    "    def __init__(self, location): \n",
-    "        '''Parameters\n",
-    "           ----------\n",
-    "           location: int \n",
-    "                number which define a location in a human cell\n",
-    "        '''\n",
-    "\n",
-    "        self.location = location\n",
-    "        self.pictures = pd.DataFrame()\n",
-    "\n",
-    "    def save_pictures(self, pictures, column_name):\n",
-    "        ''' Saves the list of pictures in the attribute pictures\n",
-    "\n",
-    "            Parameters\n",
-    "            ----------\n",
-    "            pictures: panda.DataFrame\n",
-    "                list of the names of the pictures labeled with the location and \n",
-    "                same number of pictures without the label\n",
-    "            column_name: str\n",
-    "                Description of the data saved in the DataFrame used as column names \n",
-    "        '''\n",
-    "\n",
-    "        self.pictures[column_name] = pictures\n",
-    "\n",
-    "    def get_pictures(self):\n",
-    "        '''Gives back the list of picture names which are labeled or not labeled\n",
-    "            with the given location\n",
-    "        '''\n",
-    "\n",
-    "        return self.pictures\n",
-    "\n",
-    "    def determine_pictures(self, labels):\n",
-    "        ''' First the names of the pictures labeled with the given location are \n",
-    "            saved in a list and the method to save it in a DataFrame column is \n",
-    "            called. \n",
-    "            The same number of names from pictures not labeled with the location \n",
-    "            are chosen randomly. The saving function is called with it again. \n",
-    "\n",
-    "            Parameters\n",
-    "            ----------\n",
-    "            labels: DataFrame with all picture names and Targets       \n",
-    "        '''\n",
-    "\n",
-    "        pictures = [label.Id  for index, label in labels.iterrows() \n",
-    "                              if str(self.location) in label.Target]\n",
-    "        self.save_pictures(pictures, f'pictures_with_location_{self.location}')\n",
-    "        #The number of pictures labeled with the given location is needed to get the \n",
-    "        #same number of pictures not labeled with the location\n",
-    "        number_needed_pictures= len(pictures)\n",
-    "        pictures = [label.Id  for index, label in labels.iterrows() \n",
-    "                              if str(self.location) not in label.Target]\n",
-    "        self.save_pictures(np.random.choice(pictures, number_needed_pictures),\n",
-    "                                f'pictures_without_location_{self.location}')"
    ]
   },
   {
@@ -256,24 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       d75f8798-bbb7-11e8-b2ba-ac1f6b6435d0\n",
-      "1       905ff7a8-bbb0-11e8-b2ba-ac1f6b6435d0\n",
-      "2       0827bad6-bba8-11e8-b2ba-ac1f6b6435d0\n",
-      "3       312c12aa-bbb3-11e8-b2ba-ac1f6b6435d0\n",
-      "4       c4857ef2-bbb7-11e8-b2ba-ac1f6b6435d0\n",
+      "0       62269b24-bb9e-11e8-b2b9-ac1f6b6435d0\n",
+      "1       7e0e48ae-bba4-11e8-b2b9-ac1f6b6435d0\n",
+      "2       0e70a99a-bbbf-11e8-b2ba-ac1f6b6435d0\n",
+      "3       28c5be1c-bbaf-11e8-b2ba-ac1f6b6435d0\n",
+      "4       27c998f8-bbb4-11e8-b2ba-ac1f6b6435d0\n",
       "                        ...                 \n",
-      "2960    d0bebfec-bbb9-11e8-b2ba-ac1f6b6435d0\n",
-      "2961    2302f7e6-bbb0-11e8-b2ba-ac1f6b6435d0\n",
-      "2962    9c18a43e-bb9a-11e8-b2b9-ac1f6b6435d0\n",
-      "2963    7c2a1dda-bbc5-11e8-b2bc-ac1f6b6435d0\n",
-      "2964    f1c7702c-bbc7-11e8-b2bc-ac1f6b6435d0\n",
+      "2960    73966c8e-bba5-11e8-b2ba-ac1f6b6435d0\n",
+      "2961    b22d106e-bbba-11e8-b2ba-ac1f6b6435d0\n",
+      "2962    450424ae-bbca-11e8-b2bc-ac1f6b6435d0\n",
+      "2963    aa62d426-bbac-11e8-b2ba-ac1f6b6435d0\n",
+      "2964    91e7b7b4-bb9c-11e8-b2b9-ac1f6b6435d0\n",
       "Name: pictures_without_location_23, Length: 2965, dtype: object\n"
      ]
     }
@@ -1625,7 +1561,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a619ac50d6acfdd4302904b35e357ec76d80dfbd3ef5ddbc2025fd7ca8c4ef24"
+    "hash": "19f7bca3239b03b2de0c977c50cb26509aa4d9fb832a62e270228268f2f2cc6a"
    }
   }
  },
