--- a/notebooks/decide_what_data_for_binary_model.ipynb
+++ b/notebooks/decide_what_data_for_binary_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Helper_classes import Location_in_Target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +145,7 @@
        "[31072 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,91 +162,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Location_in_Target(object):\n",
-    "    ''' Class to get a list of name of pictures which are labeled with a specific \n",
-    "        location and the same number of names of pictures which labels do not \n",
-    "        contain the specific location.\n",
-    "        ...\n",
-    "        Attributes:\n",
-    "        ----------\n",
-    "        location: int \n",
-    "            number which define a location in a human cell\n",
-    "        pictures: panda.DataFrame\n",
-    "            list of the names of the pictures labeled with the location and \n",
-    "            same number of pictures without the label\n",
-    "        \n",
-    "        Methods:\n",
-    "        ----------\n",
-    "        save_pictures(pictures, column_name):\n",
-    "            Saves the list of picture names in an Attribute\n",
-    "        get_pictures()\n",
-    "            Returns the list of picture names\n",
-    "        determine_pictures(labels)  \n",
-    "            Find pictures with and without the specific label and call save method\n",
-    "            when list is build\n",
-    "    '''\n",
-    "\n",
-    "    def __init__(self, location): \n",
-    "        '''Parameters\n",
-    "           ----------\n",
-    "           location: int \n",
-    "                number which define a location in a human cell\n",
-    "        '''\n",
-    "\n",
-    "        self.location = location\n",
-    "        self.pictures = pd.DataFrame()\n",
-    "\n",
-    "    def save_pictures(self, pictures, column_name):\n",
-    "        ''' Saves the list of pictures in the attribute pictures\n",
-    "\n",
-    "            Parameters\n",
-    "            ----------\n",
-    "            pictures: panda.DataFrame\n",
-    "                list of the names of the pictures labeled with the location and \n",
-    "                same number of pictures without the label\n",
-    "            column_name: str\n",
-    "                Description of the data saved in the DataFrame used as column names \n",
-    "        '''\n",
-    "\n",
-    "        self.pictures[column_name] = pictures\n",
-    "\n",
-    "    def get_pictures(self):\n",
-    "        '''Gives back the list of picture names which are labeled or not labeled\n",
-    "            with the given location\n",
-    "        '''\n",
-    "\n",
-    "        return self.pictures\n",
-    "\n",
-    "    def determine_pictures(self, labels):\n",
-    "        ''' First the names of the pictures labeled with the given location are \n",
-    "            saved in a list and the method to save it in a DataFrame column is \n",
-    "            called. \n",
-    "            The same number of names from pictures not labeled with the location \n",
-    "            are chosen randomly. The saving function is called with it again. \n",
-    "\n",
-    "            Parameters\n",
-    "            ----------\n",
-    "            labels: DataFrame with all picture names and Targets       \n",
-    "        '''\n",
-    "\n",
-    "        pictures = [label.Id  for index, label in labels.iterrows() \n",
-    "                              if str(self.location) in label.Target]\n",
-    "        self.save_pictures(pictures, f'pictures_with_location_{self.location}')\n",
-    "        #The number of pictures labeled with the given location is needed to get the \n",
-    "        #same number of pictures not labeled with the location\n",
-    "        number_needed_pictures= len(pictures)\n",
-    "        pictures = [label.Id  for index, label in labels.iterrows() \n",
-    "                              if str(self.location) not in label.Target]\n",
-    "        self.save_pictures(np.random.choice(pictures, number_needed_pictures),\n",
-    "                                f'pictures_without_location_{self.location}')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -246,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,27 +202,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>002ff91e-bbb8-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "      <td>9233dcc6-bbb9-11e8-b2ba-ac1f6b6435d0</td>\n",
+       "      <td>060a8378-bbb7-11e8-b2ba-ac1f6b6435d0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>00344514-bbc2-11e8-b2bb-ac1f6b6435d0</td>\n",
-       "      <td>125159fe-bbbc-11e8-b2ba-ac1f6b6435d0</td>\n",
+       "      <td>4aa95198-bbb8-11e8-b2ba-ac1f6b6435d0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>004efaa2-bba5-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "      <td>1507e650-bbbb-11e8-b2ba-ac1f6b6435d0</td>\n",
+       "      <td>6a7defb0-bbbd-11e8-b2ba-ac1f6b6435d0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>00626a32-bbab-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "      <td>92bc200a-bba9-11e8-b2ba-ac1f6b6435d0</td>\n",
+       "      <td>dbbeb0f4-bbb0-11e8-b2ba-ac1f6b6435d0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0062719a-bbbe-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "      <td>1ca2bd24-bbb4-11e8-b2ba-ac1f6b6435d0</td>\n",
+       "      <td>141ba95a-bba9-11e8-b2ba-ac1f6b6435d0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -306,14 +230,14 @@
       ],
       "text/plain": [
        "              pictures_with_location_23          pictures_without_location_23\n",
-       "0  002ff91e-bbb8-11e8-b2ba-ac1f6b6435d0  9233dcc6-bbb9-11e8-b2ba-ac1f6b6435d0\n",
-       "1  00344514-bbc2-11e8-b2bb-ac1f6b6435d0  125159fe-bbbc-11e8-b2ba-ac1f6b6435d0\n",
-       "2  004efaa2-bba5-11e8-b2ba-ac1f6b6435d0  1507e650-bbbb-11e8-b2ba-ac1f6b6435d0\n",
-       "3  00626a32-bbab-11e8-b2ba-ac1f6b6435d0  92bc200a-bba9-11e8-b2ba-ac1f6b6435d0\n",
-       "4  0062719a-bbbe-11e8-b2ba-ac1f6b6435d0  1ca2bd24-bbb4-11e8-b2ba-ac1f6b6435d0"
+       "0  002ff91e-bbb8-11e8-b2ba-ac1f6b6435d0  060a8378-bbb7-11e8-b2ba-ac1f6b6435d0\n",
+       "1  00344514-bbc2-11e8-b2bb-ac1f6b6435d0  4aa95198-bbb8-11e8-b2ba-ac1f6b6435d0\n",
+       "2  004efaa2-bba5-11e8-b2ba-ac1f6b6435d0  6a7defb0-bbbd-11e8-b2ba-ac1f6b6435d0\n",
+       "3  00626a32-bbab-11e8-b2ba-ac1f6b6435d0  dbbeb0f4-bbb0-11e8-b2ba-ac1f6b6435d0\n",
+       "4  0062719a-bbbe-11e8-b2ba-ac1f6b6435d0  141ba95a-bba9-11e8-b2ba-ac1f6b6435d0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
