--- a/notebooks/FirstBinaryNeuralNetwork.ipynb
+++ b/notebooks/FirstBinaryNeuralNetwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,15 +33,33 @@
     "import pyarrow as pa\n",
     "\n",
     "np.random.seed(421)\n",
-    "tf.random.set_seed(421)\n",
-    "\n",
-    "base_path = '/Users/ryan/neue_fische/human-protein-atlas-image-classification/data/'\n",
-    "embed_path = '/Users/ryan/neue_fische/human-protein-atlas-image-classification/data/embeddings_train/'\n"
+    "tf.random.set_seed(421)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ryans path\n",
+    "base_path = '/Users/ryan/neue_fische/human-protein-atlas-image-classification/data/'\n",
+    "embed_path = '/Users/ryan/neue_fische/human-protein-atlas-image-classification/data/embeddings_train/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Get classes from other notebooks\n",
+    "from ipynb.fs.full.decide_what_data_for_binary_model import Location_in_Target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -157,98 +175,13 @@
        "[31072 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "labels_training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Location_in_Target(object):\n",
-    "    ''' Class to get a list of name of pictures which are labeled with a specific \n",
-    "        location and the same number of names of pictures which labels do not \n",
-    "        contain the specific location.\n",
-    "        ...\n",
-    "        Attributes:\n",
-    "        ----------\n",
-    "        location: int \n",
-    "            number which define a location in a human cell\n",
-    "        pictures: panda.DataFrame\n",
-    "            list of the names of the pictures labeled with the location and \n",
-    "            same number of pictures without the label\n",
-    "        \n",
-    "        Methods:\n",
-    "        ----------\n",
-    "        save_pictures(pictures, column_name):\n",
-    "            Saves the list of picture names in an Attribute\n",
-    "        get_pictures()\n",
-    "            Returns the list of picture names\n",
-    "        determine_pictures(labels)  \n",
-    "            Find pictures with and without the specific label and call save method\n",
-    "            when list is build\n",
-    "    '''\n",
-    "\n",
-    "    def __init__(self, location): \n",
-    "        '''Parameters\n",
-    "           ----------\n",
-    "           location: int \n",
-    "                number which define a location in a human cell\n",
-    "        '''\n",
-    "\n",
-    "        self.location = location\n",
-    "        self.pictures = pd.DataFrame()\n",
-    "\n",
-    "    def save_pictures(self, pictures, column_name):\n",
-    "        ''' Saves the list of pictures in the attribute pictures\n",
-    "\n",
-    "            Parameters\n",
-    "            ----------\n",
-    "            pictures: panda.DataFrame\n",
-    "                list of the names of the pictures labeled with the location and \n",
-    "                same number of pictures without the label\n",
-    "            column_name: str\n",
-    "                Description of the data saved in the DataFrame used as column names \n",
-    "        '''\n",
-    "\n",
-    "        self.pictures[column_name] = pictures\n",
-    "\n",
-    "    def get_pictures(self):\n",
-    "        '''Gives back the list of picture names which are labeled or not labeled\n",
-    "            with the given location\n",
-    "        '''\n",
-    "\n",
-    "        return self.pictures\n",
-    "\n",
-    "    def determine_pictures(self, labels):\n",
-    "        ''' First the names of the pictures labeled with the given location are \n",
-    "            saved in a list and the method to save it in a DataFrame column is \n",
-    "            called. \n",
-    "            The same number of names from pictures not labeled with the location \n",
-    "            are chosen randomly. The saving function is called with it again. \n",
-    "\n",
-    "            Parameters\n",
-    "            ----------\n",
-    "            labels: DataFrame with all picture names and Targets       \n",
-    "        '''\n",
-    "\n",
-    "        pictures = [label.Id  for index, label in labels.iterrows() \n",
-    "                              if str(self.location) in label.Target]\n",
-    "        self.save_pictures(pictures, f'pictures_with_location_{self.location}')\n",
-    "        #The number of pictures labeled with the given location is needed to get the \n",
-    "        #same number of pictures not labeled with the location\n",
-    "        number_needed_pictures= len(pictures)\n",
-    "        pictures = [label.Id  for index, label in labels.iterrows() \n",
-    "                              if str(self.location) not in label.Target]\n",
-    "        self.save_pictures(np.random.choice(pictures, number_needed_pictures),\n",
-    "                                f'pictures_without_location_{self.location}')"
    ]
   },
   {
@@ -260,167 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>target_id</th>\n",
-       "      <th>image_path</th>\n",
-       "      <th>embedding</th>\n",
-       "      <th>image_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7</td>\n",
-       "      <td>../data/train/4b0d7acc-bbb5-11e8-b2ba-ac1f6b64...</td>\n",
-       "      <td>[-0.14782768, -0.19346946, 0.029495712, -0.114...</td>\n",
-       "      <td>4b0d7acc-bbb5-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5 0</td>\n",
-       "      <td>../data/train/4b0e4648-bbc2-11e8-b2bb-ac1f6b64...</td>\n",
-       "      <td>[-0.11768038, 0.108380914, -0.07158355, -0.051...</td>\n",
-       "      <td>4b0e4648-bbc2-11e8-b2bb-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>23</td>\n",
-       "      <td>../data/train/4b0fe352-bbbf-11e8-b2ba-ac1f6b64...</td>\n",
-       "      <td>[-0.14264518, -0.14894637, 0.015262008, -0.138...</td>\n",
-       "      <td>4b0fe352-bbbf-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>../data/train/4b1164e4-bbaf-11e8-b2ba-ac1f6b64...</td>\n",
-       "      <td>[-0.14977421, -0.12706101, -0.17702478, -0.087...</td>\n",
-       "      <td>4b1164e4-bbaf-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>25</td>\n",
-       "      <td>../data/train/4b120c9e-bbb1-11e8-b2ba-ac1f6b64...</td>\n",
-       "      <td>[-0.15020615, -0.008659467, -0.14262204, -0.04...</td>\n",
-       "      <td>4b120c9e-bbb1-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31067</th>\n",
-       "      <td>7</td>\n",
-       "      <td>../data/train/9d04d730-bbb5-11e8-b2ba-ac1f6b64...</td>\n",
-       "      <td>[-0.095827445, -0.14014255, -0.1306586, -0.081...</td>\n",
-       "      <td>9d04d730-bbb5-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31068</th>\n",
-       "      <td>4</td>\n",
-       "      <td>../data/train/9d09c7e0-bb9c-11e8-b2b9-ac1f6b64...</td>\n",
-       "      <td>[-0.109680824, -0.07402489, -0.08704822, -0.08...</td>\n",
-       "      <td>9d09c7e0-bb9c-11e8-b2b9-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31069</th>\n",
-       "      <td>0</td>\n",
-       "      <td>../data/train/9d0a7012-bbc6-11e8-b2bc-ac1f6b64...</td>\n",
-       "      <td>[-0.14760047, -0.105946906, 0.17695697, -0.130...</td>\n",
-       "      <td>9d0a7012-bbc6-11e8-b2bc-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31070</th>\n",
-       "      <td>25 0</td>\n",
-       "      <td>../data/train/9d10ecec-bba0-11e8-b2b9-ac1f6b64...</td>\n",
-       "      <td>[-0.12235144, -0.12698074, -0.052961998, -0.10...</td>\n",
-       "      <td>9d10ecec-bba0-11e8-b2b9-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31071</th>\n",
-       "      <td>7 0</td>\n",
-       "      <td>../data/train/9d114136-bbb6-11e8-b2ba-ac1f6b64...</td>\n",
-       "      <td>[-0.1314421, -0.13573745, -0.14491996, -0.0963...</td>\n",
-       "      <td>9d114136-bbb6-11e8-b2ba-ac1f6b6435d0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>31072 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      target_id                                         image_path  \\\n",
-       "0             7  ../data/train/4b0d7acc-bbb5-11e8-b2ba-ac1f6b64...   \n",
-       "1           5 0  ../data/train/4b0e4648-bbc2-11e8-b2bb-ac1f6b64...   \n",
-       "2            23  ../data/train/4b0fe352-bbbf-11e8-b2ba-ac1f6b64...   \n",
-       "3             2  ../data/train/4b1164e4-bbaf-11e8-b2ba-ac1f6b64...   \n",
-       "4            25  ../data/train/4b120c9e-bbb1-11e8-b2ba-ac1f6b64...   \n",
-       "...         ...                                                ...   \n",
-       "31067         7  ../data/train/9d04d730-bbb5-11e8-b2ba-ac1f6b64...   \n",
-       "31068         4  ../data/train/9d09c7e0-bb9c-11e8-b2b9-ac1f6b64...   \n",
-       "31069         0  ../data/train/9d0a7012-bbc6-11e8-b2bc-ac1f6b64...   \n",
-       "31070      25 0  ../data/train/9d10ecec-bba0-11e8-b2b9-ac1f6b64...   \n",
-       "31071       7 0  ../data/train/9d114136-bbb6-11e8-b2ba-ac1f6b64...   \n",
-       "\n",
-       "                                               embedding  \\\n",
-       "0      [-0.14782768, -0.19346946, 0.029495712, -0.114...   \n",
-       "1      [-0.11768038, 0.108380914, -0.07158355, -0.051...   \n",
-       "2      [-0.14264518, -0.14894637, 0.015262008, -0.138...   \n",
-       "3      [-0.14977421, -0.12706101, -0.17702478, -0.087...   \n",
-       "4      [-0.15020615, -0.008659467, -0.14262204, -0.04...   \n",
-       "...                                                  ...   \n",
-       "31067  [-0.095827445, -0.14014255, -0.1306586, -0.081...   \n",
-       "31068  [-0.109680824, -0.07402489, -0.08704822, -0.08...   \n",
-       "31069  [-0.14760047, -0.105946906, 0.17695697, -0.130...   \n",
-       "31070  [-0.12235144, -0.12698074, -0.052961998, -0.10...   \n",
-       "31071  [-0.1314421, -0.13573745, -0.14491996, -0.0963...   \n",
-       "\n",
-       "                                 image_name  \n",
-       "0      4b0d7acc-bbb5-11e8-b2ba-ac1f6b6435d0  \n",
-       "1      4b0e4648-bbc2-11e8-b2bb-ac1f6b6435d0  \n",
-       "2      4b0fe352-bbbf-11e8-b2ba-ac1f6b6435d0  \n",
-       "3      4b1164e4-bbaf-11e8-b2ba-ac1f6b6435d0  \n",
-       "4      4b120c9e-bbb1-11e8-b2ba-ac1f6b6435d0  \n",
-       "...                                     ...  \n",
-       "31067  9d04d730-bbb5-11e8-b2ba-ac1f6b6435d0  \n",
-       "31068  9d09c7e0-bb9c-11e8-b2b9-ac1f6b6435d0  \n",
-       "31069  9d0a7012-bbc6-11e8-b2bc-ac1f6b6435d0  \n",
-       "31070  9d10ecec-bba0-11e8-b2b9-ac1f6b6435d0  \n",
-       "31071  9d114136-bbb6-11e8-b2ba-ac1f6b6435d0  \n",
-       "\n",
-       "[31072 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load embeddings (saved as parquet files), convert to pandas and get strings as strings\n",
     "emb = pq.read_table(embed_path).to_pandas()\n",
@@ -439,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5561,7 +5336,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "720bc5554050b7f8e1eb7fe3e9802d242667e213d5e4820e5b9adf1aa2f6a51f"
+    "hash": "19f7bca3239b03b2de0c977c50cb26509aa4d9fb832a62e270228268f2f2cc6a"
    }
   }
  },
